tests/baselines/reference/superCallInsideClassExpression.errors.txt
superCallInsideClassExpression.ts(8,5): error TS2377: Constructors for derived classes must contain a 'super' call.


==== superCallInsideClassExpression.ts (1 errors) ====
    class A {
    }
    
    class C {
    }
    
    class B extends A {
        constructor() {
        ~~~~~~~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    
            var D = class extends C {
                constructor() {
                    super();
                }
            }
        }
    }